--- a/index.html
+++ b/index.html
@@ -21,3 +21,48 @@
         </ul>
       </div>
   </div>
+<div class="contents">
+        <h3 class="section-title">メニュー</h3>
+        <div class="contents-item">
+          <img src="datumou.github.io/380a83e6f48254ab1088515cac7c6a41.jpeg">
+          <p>全身　（顔&VIO</p>
+        </div>
+        <div class="contents-item">
+          <img src="https://s3-ap-northeast-1.amazonaws.com/progate/shared/images/lesson/html/study/php.svg">
+          <p>PHP</p>
+        </div>
+        <div class="contents-item">
+          <img src="https://s3-ap-northeast-1.amazonaws.com/progate/shared/images/lesson/html/study/ruby.svg">
+          <p>Ruby</p>
+        </div>
+        <div class="contents-item">
+          <img src="https://s3-ap-northeast-1.amazonaws.com/progate/shared/images/lesson/html/study/swift.svg">
+          <p>Swift</p>
+        </div>
+      </div>
+
+      <div class="contact-form">
+        <!-- <h3>要素を追加し、「section-title」というclassをつけてください -->
+        <h3 class="contact-form">お問い合わせ
+        </h3>
+        <p>メールアドレス（必須）</p>
+        <p>お問い合わせ内容（必須）</p>
+        <p>※必須項目は必ずご入力ください</p>
+        <!-- <p>要素を3つ追加してください -->
+
+
+      </div>
+    </div>
+
+    <div class="footer">
+      <div class="footer-logo">Progate</div>
+      <div class="footer-list">
+        <ul>
+          <li>会社概要</li>
+          <li>採用</li>
+          <li>お問い合わせ</li>
+        </ul>
+      </div>
+    </div>
+  </body>
+</html>
