--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <div class="contents">
         <h3 class="section-title">メニュー</h3>
         <div class="contents-item">
-          <img src="datumou.github.io/380a83e6f48254ab1088515cac7c6a41.jpeg">
+          <img src="https://github.com/datumou/datumou.github.io/blob/master/380a83e6f48254ab1088515cac7c6a41.jpeg">
           <p>全身　（顔&VIO</p>
         </div>
         <div class="contents-item">
