--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>脱毛屋さん</title>
     <link rel="stylesheet" href="stylesheet.css">
-    　<link rel=""
+    　<link rel="https://github.com/datumou/datumou.github.io/blob/master/380a83e6f48254ab1088515cac7c6a41.jpeg">
   </head>
   <body>
     <div class="header">
